<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Projet Android Application Traduction / Dictionnaire</string>
    <string name="nav_header_subtitle">TRAORE Paul et CADIOU Léo-Paul</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Initialisation / Suppression Base de donnée</string>
    <string name="menu_slideshow">Ma Liste personnelle</string>
    <string name="menu_tools">Gestion avancée Base de Donnée</string>
    <string name="menu_share">Ajouter une Traduction</string>
    <string name="menu_send">Send</string>
    <string name="titre_liste">Voici votre liste d\'apprentissage personnelle :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Ma_liste">Voici votre Liste personnelle</string>

    <!-- TODO : ajouter les autres mots !!!-->
    <string-array name="tableau_mot">
        <item>Bonjour</item>
        <item>Salut</item>
        <item>Cacahuete</item>
        <item>Elephant</item>
        <item>Stylo</item>
        <item>Crayon</item>
        <item>Ordinateur</item>
        <item>Master</item>
        <item>Hello</item>
        <item>Computeur</item>
        <item>Voiture</item>
        <item>Car</item>
    </string-array>
</resources>
