<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projet_android.Page_demarrage"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_page_demarrage">
        <argument
            android:name="param1"
            android:defaultValue="init"
            app:argType="string" />
        <argument
            android:name="param2"
            android:defaultValue="user"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_nav_home_pop"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.projet_android.Fragment_bas"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_fragment_bas" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="init" />
        <argument
            android:name="param2"
            app:argType="string"
            android:defaultValue="bdd" />
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim">
            <argument
                android:name="param1"
                android:defaultValue="init" />
            <argument
                android:name="param2"
                android:defaultValue="user" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.projet_android.fragment_ma_liste_perso"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_fragment_ma_liste_perso" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="affiche" />
        <argument
            android:name="param2"
            app:argType="string"
            android:defaultValue="liste" />
    </fragment>

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.projet_android.fragment_acces_memoire_tel"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_fragment_acces_memoire_tel" >
        <argument
            android:name="param1"
            app:argType="string"
            android:defaultValue="apprentissage" />
        <argument
            android:name="param2"
            app:argType="string"
            android:defaultValue="mot a mot" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>